# fast_api

./: .coverage  .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_api/: app.py  models.py  schemas.py  security.py  settings.py
fast_api/routes/: auth.py  todo.py  users.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
