[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = "Testando a aprendendo mais sobre ambientes de desenvolvimento pyton e fastApi, e relacionados."
authors = ["portes <fagundes.daniel191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.2"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.taskipy.tasks]
run = 'fastapi dev fast_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --conv=fast_api -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --dfix'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
