[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = "Testando a aprendendo mais sobre ambientes de desenvolvimento pyton e fastApi, e relacionados."
authors = ["portes <fagundes.daniel191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.2"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.34"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"

[tool.ruff.format]
preview = true
quote-style = 'single'

[pytest]
plugins = ["pytest_fastapi"]

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -q -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
